--- a/ch10-font/css/study1.css
+++ b/ch10-font/css/study1.css
@@ -29,3 +29,91 @@ h1,h2,h3,h4,h5,h6{
 /* line-height는 행간. 글씨 박스의 높이. */
 /* 1.2라는 뜻은 글씨크기의 1.2배를 의미. */
 /* if, 300px로 설정하면 300px로 고정된다. */
+
+.ex3{
+    font-style: italic;
+}
+
+address{
+    font-style: normal;
+    /* address, em, i태그는 기본적으로 fontstyle이 italic으로 되어있음 */
+}
+
+.ex4{
+    letter-spacing: 50px;
+    /* 자간(문자와 문자 사이의 간격)이 50px로 설정된다는 의미 */
+}
+
+.ex5{
+    word-spacing: 50px;
+    /* 단어와 단어 사이의 공백이 50px로 설정된다는 의미 */
+}
+
+.ex6{
+    /* white-space: nowrap; */
+    /* 글자가 줄바꿈이 안되고, 한 줄로 처리가 됨 */
+    /* white-space: pre; */
+    /* 코드편집기에서 들여쓰기, 줄바꿈을 했을 때, 브라우저에 그대로 반영되는 것을 의미  */
+    white-space: pre-wrap;
+    /* pre처럼 그대로 반영되면서, 줄바꿈이 없는 애들도 자동 줄바꿈이 됨 */
+}
+    /* 줄바꿈이 되는 애들을 wrap, 줄바꿈이 안되는 애들을 nowrap이라 함 */
+    /* tap키는 들여쓰기, space키는 공백, enter키는 줄바꿈 */
+
+    .ex7{
+        text-indent: 100px;
+        /* 문단의 첫 줄 들여쓰기. 문장?의 첫 줄에 들여쓰기가 100px만큼 되었다는 것을 의미 */
+    }
+
+    .ex8{
+        /* text-decoration: underline; */
+        /* 텍스트를 꾸미는 것으로 underline을 생성해줌 */
+        /* 대표적으로, a태그는 기본적으로 밑줄 스타일이 들어가 있음 */
+        text-decoration: line-through;
+        /* 취소선 스타일 적용. 글씨 중간에 일자 라인 생성 */
+    }
+
+    a{
+        text-decoration: none;
+        /* 밑줄의 라인(기본값)을 none으로 없앨 수 있음 */
+        /* text-decoration: initial; */
+        /* 태그의 기본값으로 설정해줌! (만약 기본값이 기억이 나지 않는다면 이용) */
+    }
+
+    .ex9{
+        border: 1px solid red;
+        /* text-align: center; */
+        /* 문단정렬 : 왼쪽정렬, 가운데정렬, 오른쪽정렬 */
+        /* content box 안에서의 정렬. 기본값은 left */
+        text-align: justify;
+        /* text-align: justify;로 설정하면 양쪽정렬이 됨. 그러나 양쪽정렬을 맞추다 보면 그것이 우선순위가 되어, 단어 사이의 간격이 벌어질 수 있음. 단어는 깨지지 않는 선에서 줄바꿈이 되기 때문에 간격이 많이 남아도 줄바꿈이 될 수 있음 (영어는 단어를 깨면 안됨)*/
+        word-break: break-all;
+        /* 단어를 깨는 것(공간이 없으면 한 단어이지만 줄바꿈이 되는 것) */
+        /* 이런식으로 하면 가독성이 매우 안좋기 때문에 사용x */
+        /* word-break: keep-all; */
+        /* 단어를 깨지않고 유지 */
+        width: 600px;
+        /* width는 content box의 너비(기본값)를 뜻함 */
+        margin: 0 auto;
+        /* text자체를 브라우저의 중간으로 옮기고싶으면, margin을 줘야 여백이 생기면서 content box 자체가 옮겨짐 */
+    }
+
+    .ex10{
+        /* text-transform: uppercase; */
+        /* text가 전부 대문자가 됨 */
+        /* text-transform: lowercase; */
+        /* text가 전부 소문자가 됨 */
+        text-transform: capitalize;
+        /* 단어들마다 가장 앞부분만 대분자 처리 */
+    }
+
+    .ex11{
+        font-size: 40px;
+    }
+    .ex11 b{
+        font-size: 0.5em;
+        vertical-align: middle;
+        /* 기본값은 baseline. 노트의 필기선에 맞추는 것과 동일 */
+        /* 큰 글자와 어울리게 top, bottom 또는 middle로 선택할 수 있음 */
+        /* px 단위를 쓸 때는 rem 단위를 계산해서 자유롭게 쓸 수 있음 */
+    }
